# JC-OS

./: .gitignore  Cargo.toml  Readme.md  licence  notice  x86_64-jc-os.json
.cargo/: config.toml
src/: allocator.rs  auth.rs  executor.rs  fs.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  serial.rs  shell.rs  task.rs  vga_buffer.rs
src/drivers/: keyboard.rs  mod.rs  mouse.rs  rtc.rs
tools/: ai_bridge.py  openai_bridge.py
