[package]
name = "jc-os"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0" 

[dependencies]
# On active la feature directement ici, c'est plus stable pour la v0.9
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.10"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.2"

# --- LA SECTION SUIVANTE A ÉTÉ SUPPRIMÉE POUR ÉVITER L'ERREUR DE BUILD ---
# [package.metadata.bootloader]
# map-physical-memory = true
# -----------------------------------------------------------------------

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"